--- a/vezba26/vezba26.css
+++ b/vezba26/vezba26.css
@@ -77,10 +77,15 @@ textarea {
 @media screen and (max-width: 500px) {
    .same2 {
        width: 50%;
-
+        
+   }
+   .same2 {
+       margin: 0px;
+   }
+   .main {
+       padding: 50px;
    }
    
-
    
 }
 @media screen and (max-width: 300px) {
@@ -89,7 +94,10 @@ textarea {
         
     }
     .main {
-        padding: 20px;
+        padding: 30px;
+    }
+    .same2 {
+        margin: 0px;
     }
    
 }
