--- a/vezba25/vezba25.css
+++ b/vezba25/vezba25.css
@@ -14,6 +14,9 @@ body {
     position: sticky;
     top: 0px;
 }
+.main {
+    font-family: monospace;
+}
 .rem {
     color: white;
     margin: 5px;
@@ -62,6 +65,7 @@ li a:hover {
     background-repeat: no-repeat; 
     background-size: 100% 100vh;
     height: 500px;
+    background-attachment: scroll, local;
 }
 .btn {
     border: 1px solid rgb(36, 184, 36);
@@ -88,17 +92,23 @@ li a:hover {
 }
 .cent{
     display: flex;
+    justify-content: center;
+    flex-direction: column;
 }
 .cent2 {
     background-image: url(br3.jpg);
-    height: 400px;
-    width: 500px;
+    background-size: 100rem 1000px;
+    /* height: 400px; */
+     width: 80%; 
     margin-left: 30px;
     margin: 25px;
     display: flex;
-    align-items: center;
     justify-content: center;
-    
+    align-items: center;
+    background-repeat: no-repeat;
+}
+.sameline {
+    display: flex;
 }
 .play {
     border: 1px solid rgb(36, 184, 36);
@@ -119,4 +129,276 @@ li a:hover {
     width: 100px;
     height: 40px;
     color: rgb(36, 184, 36);
+}
+.pic {
+    display: flex;
+}
+.btn2 {
+    border: 1px solid rgb(36, 184, 36);
+    border-radius: 30px;
+}
+.some {
+    color: black;
+    text-decoration: none;
+    margin: 10px;
+}
+.some:hover {
+    color:rgb(36, 184, 36);
+    transition: 0.7s;
+    
+}
+.pic2 {
+    display: flex;
+}
+.pic3 {
+    display: flex;
+}
+.container3{
+    display: flex;
+    justify-content: space-between;
+}
+.container4 {
+    display: flex;
+    justify-content: space-between;
+    margin: 10px 100px;
+}
+.whyus {
+    text-align: center;
+}
+.btn4 {
+    color:rgb(36, 184, 36);
+    background-color: lightgray;
+    border: 1px solid lightgray;
+    border-radius: 20px;
+    padding: 10px;
+    width: 10%;
+}
+.choose {
+    color: rgb(36, 184, 36);
+}
+h2 {
+    font-size: 250%;
+    color: #3d3837;
+}
+.cont2 {
+    display: flex;
+    flex-direction: column;
+ 
+}
+.box {
+    border: 1px solid rgba(235, 231, 231, 0.994);
+    box-shadow: 5px -5px 5px 5px rgba(225, 219, 219, 0.83);
+    margin: 15px 100px;
+    padding: 10px 30px;
+    width: 100%;
+
+}
+.box:hover{
+    background-color: rgb(36, 184, 36);
+    color: white;
+    transition: 0.5s;
+   
+}
+/* .box1 { */
+    /* border: 1px solid rgba(235, 031, 231, 0.994); */
+    /* box-shadow: 5px 5px 5px grey; */
+/* } */
+.same4 {
+    color:  #3d3837;
+    font-size: 30px;
+}
+.box1:hover {
+    color: white;
+}
+/* .same4:hover { */
+    /* color: white */
+/* } */
+.same5 {
+    color: lightgray;
+}
+.same6 {
+    font-family: sans-serif;
+}
+.gr {
+    color: #3d3837;
+    font-size: 20px;
+}
+
+.zero {
+    color: rgb(36, 184, 36);
+    font-size: 30px;
+    font-family: sans-serif;
+}
+/* .zero:hover { */
+    /* color: white; */
+/* } */
+.num {
+    color:rgb(36, 184, 36);
+    font-size: 50px;
+    
+}
+.action {
+    border: 1px solid black;
+    background: linear-gradient(black,transparent), url(action.jpg);
+    background-size: cover;
+    background-attachment: scroll;
+    color: white;
+    text-align: center
+
+}
+.call{ 
+    font-size: 8vh;
+}
+.lor {
+    font-size: 3vh;
+}
+.btn5 {
+    color: white;
+    border: 2px solid white;
+    border-radius: 30px;
+    background: url(action.jpg);
+    padding: 15px;
+    font-family: sans-serif;
+    font-size: 15px;
+    margin: 10px;
+}
+.btn5:hover{
+    background: rgb(36, 184, 36);
+    transition: 0.5s;
+}
+.services {
+    text-align: center;
+    font-family: sans-serif;
+}
+.servic {
+    border: 1px solid lightgray;
+    background-color: lightgray;
+    color:rgb(36, 184, 36);
+    padding: 10px;
+    border-radius: 40px;
+    margin: 10px;
+}
+.serv {
+    color: rgb(36, 184, 36);
+}
+.same7 {
+    color: #3d3837;
+}
+.box6 {
+    border: 1px solid lightgray;
+    height: 250px;
+    width: 300px;
+    text-align: center;
+    margin: 10px;
+    padding: 15px;
+}
+.box6:hover{
+    box-shadow: 5px 5px 5px lightgray;
+    transition: 0.6s;
+}
+.image2 {
+    width: 50px;
+    height: 50px;
+    margin: 10px;
+}
+.one {
+    margin: 10px;
+    font-size: 5vh;
+}
+.one:hover{
+    color: rgb(36, 184, 36);
+}
+.container5 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+.portfolio{ 
+    font-family: sans-serif;
+}
+.port {
+    border: 1px solid lightgray;
+    background-color:lightgray;
+    color:rgb(2, 155, 2);
+    border-radius: 30px;
+    padding: 10px;
+}
+.folio {
+    color:rgb(36, 184, 36);
+}
+.apps {
+    border: 1px solid gainsboro;
+    background-color: gainsboro;
+    color: black;
+    border-radius: 30px;
+    margin: 10px;
+    padding: 10px 15px;
+}
+.apps:hover {
+    background-color: rgb(2, 155, 2);
+    color: white;
+    transition: 0.5s;
+}
+.images {
+    display: grid;
+    gap: 10px;
+    grid-template-columns: repeat(3,1fr);
+    grid-row-start: 1;
+    grid-row-end: 3;
+    align-self: center;
+    
+}
+.same8 {
+    width: 50vh;
+}
+.move{
+    text-align: center;
+}
+.workteam {
+    display: flex;
+    
+}
+.team {
+    border: 1px solid gainsboro;
+    background-color: gainsboro;
+    border-radius: 30px;
+    padding: 10px;
+    color:rgb(2, 155, 2);
+    margin: 10px;
+}
+.team2 {
+    color:rgb(36, 184, 36);
+}
+.our {
+    color:#3d3837;
+}
+.box9 {
+    border: 1px solid gainsboro;
+    margin: 10px 25px;
+    border-radius: 20px;
+    box-shadow: 5px 5px 10px gainsboro;
+}
+.person {
+    width: 100%;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;;
+}
+.name {
+    color: #3d3837;
+}
+.job {
+    color: grey;
+}
+.quotes {
+    border: 1px solid grey;
+    height: 30vh;
+    background: url(office.jfif);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    
+}
+.goodman {
+    width: 50px;
+    height: 50px;
 }
