--- a/vezba25/vezba25.css
+++ b/vezba25/vezba25.css
@@ -32,6 +32,9 @@ li {
     text-align: right;
     margin-left: 80px;
 }
+.text3 {
+    font-family: sans-serif;
+}
 a {
     text-decoration: none;
     color: white;
@@ -97,7 +100,7 @@ li a:hover {
 }
 .cent2 {
     background-image: url(br3.jpg);
-    background-size: 100rem 1000px;
+    background-size: 60rem 1000px;
     /* height: 400px; */
      width: 80%; 
     margin-left: 30px;
@@ -120,6 +123,10 @@ li a:hover {
     color: white;
     border: 5px solid rgb(111, 230, 111)
 
+}
+.play:hover{
+    height: 100px;
+    width: 100px;
 }
 .aboutus {
     border: 1px solid lightgray;
@@ -153,13 +160,11 @@ li a:hover {
 .pic3 {
     display: flex;
 }
-.container3{
+.container3,.container4{
     display: flex;
     justify-content: space-between;
 }
 .container4 {
-    display: flex;
-    justify-content: space-between;
     margin: 10px 100px;
 }
 .whyus {
@@ -468,7 +473,6 @@ h2 {
 }
 .card2 {
     border: 1px solid rgb(36, 184, 36) ;
-    
 }
 .buy1 {
     border: 2px solid rgb(36, 184, 36) ;
@@ -486,6 +490,7 @@ h2 {
     border: 1px solid  rgb(36, 184, 36);
     border-radius: 30px;
     padding: 10px 30px;
+    margin: 10px;
 }
 .buy2:hover{
     background-color: green;
@@ -497,4 +502,51 @@ h2 {
 }
 .busines {
     font-weight: bold;
+}
+.container6{
+    border: 1px solid rgb(233, 230, 230);
+    margin-top: 50px;
+    background-color: rgb(233, 230, 230);
+}
+.faq {
+    border: 1px solid lightgrey;
+    background-color: lightgrey;
+    color:rgb(36, 184, 36);
+    padding: 10px 30px;
+    margin: 20px;
+    border-radius: 20px;
+}
+.question {
+    color:rgb(36, 184, 36);
+}
+.ask {
+    color: #3d3837;
+}
+.cards5 {
+    border: 1px solid whitesmoke;
+    background-color: whitesmoke;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.ask2 {
+    text-decoration: none;
+    color: #3d3837;
+}
+.ask2:hover {
+    color:rgb(36, 184, 36);
+}
+.drop {
+    position: relative;
+    display: none;
+    z-index: 1;
+    position: absolute;
+}
+.drop a {
+    color: #3d3837;
+    display: block;
+    padding: 10px 10px;
+}
+.drop:hover {
+    display: block;
 }
