--- a/vezba27/vezba27.css
+++ b/vezba27/vezba27.css
@@ -1,3 +1,6 @@
+* {
+    font-family: sans-serif;
+}
 body {
     margin: 0px;
 }
@@ -50,6 +53,7 @@ li a {
 .travel {
     color: white;
     font-size: 40px;
+    text-shadow: 5px 10px 30px lightgrey;
    
 }
 .start {
@@ -60,7 +64,7 @@ li a {
     border: 1px solid rgb(18, 18, 146);
     background-color: rgb(18, 18, 146);
     color: white;
-    padding: 20px 30px;
+    padding: 20px 50px;
 
 }
 .book:hover{
@@ -71,11 +75,44 @@ li a {
     background: url(city.jpg);
     height: 85vh;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    flex-direction: row;
+    justify-content: space-evenly;
+    
     
  
 }
+.clouds {
+    width: 100%;
+    height: 500px;
+    display: flex;
+    justify-content: right;
+    overflow: hidden;
+    
+}
+.cloud {
+    animation-name: cloud;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    z-index: -1;
+    animation-timing-function: cubic-bezier(0.25, 0.25, 0.75, 0.75);
+}
+.cloud2 {
+    animation-name: cloud2;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+@keyframes cloud {
+    50% {
+        width: 150px;
+    }
+}
+@keyframes cloud2 {
+    100% {
+        width: 150px;
+    }
+}
+
 .exp{
     padding: 10px;
     margin: 10px;
@@ -134,6 +171,7 @@ li a {
     height: 85vh;
     background-repeat: no-repeat;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     background-size: cover;
@@ -141,10 +179,11 @@ li a {
 }
 .contact {
     border: 1px solid black; 
-    background: linear-gradient(black, transparent); 
+    background: linear-gradient(rgba(7, 16, 38, 0.789), transparent); 
     border-top-left-radius: 30px;
     border-top-right-radius: 30px;;
-    padding: 50px; 
+     padding: 50px 30px;  
+    width: 90vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -172,14 +211,7 @@ input {
     align-items: center;
     justify-content: center;
 }
-.sub {
-    border:rgb(49, 49, 187);
-    background-color:rgb(3, 3, 95);
-    color: white;
-    padding: 30px 50px;
-    width: 125%;
-    
-}
+
 .last {
     background-color: rgb(6, 6, 39);
     border: 1px solid rgb(6, 6, 39);
@@ -212,4 +244,18 @@ input {
 }
 .sameh {
     font-family: sans-serif;
+}
+.sub {
+    border:1px solid rgb(3, 3, 95);
+    background-color:rgb(3, 3, 95);
+    color: white;
+    padding: 20px 30px;
+    width: 100vh;
+    border-bottom-left-radius: 30px;
+    border-bottom-right-radius: 30px;
+
+}
+.sub:hover {
+    background-color:rgb(6, 6, 39);
+    transition: 0.5s;
 }
