--- a/TODO/ind.css
+++ b/TODO/ind.css
@@ -39,8 +39,8 @@ body {
 }
 .btn {
   display: flex;
-  justify-content: space-evenly;
-  align-items: center;
+  justify-content: end;
+  align-items: center; 
   border: 1px solid white;
   background-color: white;
   margin: 5px;
@@ -50,7 +50,9 @@ body {
   border: 1px solid black;
   background-color: black;
   color: white;
-  padding: 10px 15px;
+  padding: 20px 10px;
+  width: 50vh;
+  margin: 0px;
 }
 .del:hover {
   background-color: blueviolet;
@@ -60,18 +62,19 @@ body {
   color: white;
   border: 1px solid green;
   background-color: green;
-  padding: 10px 10px;
+  padding: 20px 10px;
   margin-left: 20px;
+  width: 50vh;
 }
 .check:hover {
   background-color: chartreuse;
   transition: all 0.5s ease;
   border: 1px solid chartreuse;
 }
-.del,
+/* .del,
 .check {
-  flex: 1;
-}
+  flex: 2;
+} */
 .falling {
   transform: translateY(8rem) rotateZ(20deg);
   opacity: 0;
